syntax = "proto3";

package kessel.health.v1;

import "google/api/annotations.proto";

option go_package = "github.com/project-kessel/relations-api/api/kessel/health/v1";
option java_multiple_files = true;
option java_package = "org.project_kessel.api.relations.v1";

service KesselHealthService {
	rpc GetLivez (GetLivezRequest) returns (GetLivezResponse){
		option (google.api.http) = {
			get: "/livez"
		};
	};
	rpc GetReadyz (GetReadyzRequest) returns (GetReadyzResponse){
		option (google.api.http) = {
			get: "/readyz"
		};
	};
}

message GetLivezRequest {}
message GetLivezResponse {
	string status = 1;
	uint32 code = 2;
}

message GetReadyzRequest {}
message GetReadyzResponse {
	string status = 1;
	uint32 code = 2;
}
